[package]
name = "distro-watch"
version = "0.1.0"
edition = "2021"
authors = ["which-distro-rs contributors"]
readme = "README.md"
license = "GPL-2.0-only"
repository = "https://github.com/which-distro/distro-watch"
keywords = ["linux", "distro", "distribution"]

[dependencies]
getset = "0.1.2"
reqwest = { version = "0.11.18", features = ["json"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
